styles.css
* {
    margin: 0;
    padding: 0;
} 

a:visited{
    color: #D81159;
}

:root{
    font-family: Barlow, sans-serif;
    color:white;
}

h1,h2,h3,h4,h5,h6 {
    font-family: 'Playfair Display',serif;
}

/* ok */


.container {
    display: grid;
    padding: 0rem;
    grid-template-columns: 1fr 1fr;
    background-color: black;
    height: 100vh;
    box-sizing: border-box;
}



.imageL {
    display: grid;
    background-size:cover;
    background-image: url(/images/NYC.png);
    background-position: center top;
    background-repeat: no-repeat;
    box-sizing: border-box;
    justify-items: center;

}

.sectionR {
    display: grid;
    grid-template-rows: 0.9fr 1.1fr;
    height: 100vh;
    box-sizing: border-box;
    justify-items: center;
}

#logo {
    font-family: 'Playfair Display',serif;
    font-style:italic;
    font-weight: bold;
    font-size: 70px;
    text-shadow: 0px 0px 15px rgba(0,0,0,0.3);
    align-self: center;
    justify-self: center;
    padding: 1rem;
}

.textIntro{
    font-family: 'Playfair Display',serif;
    font-weight: 400;
    font-size: 28px;
    width: 420px;
    box-sizing: border-box;
    align-self: flex-end;
    margin: 4rem;
}

.alreadyMember {
    grid-column: 1 / 3;
    justify-self: center;
}

/* Form Styling - add responsive grid later + responsive text sizes */
form {
    display: grid;
    grid-template-columns: 1fr 2fr;
    font-family: Barlow;
    font-size: large;
    font-weight:200;
    width: 100%;
    gap: 1rem;
    align-self: center;
}

label {
    grid-column: 1 / 2;
    padding:0.5rem;
    min-width:max-content;
    text-align: end;
}
 
input {
    height:1.5rem;
    grid-column: 2 / 3;
    width: 100%;
    min-width: 10rem;
}
button {
    grid-column: 1 / 3;
    justify-self: center;
    background-color: #D81159;
    border: 0;
    border-radius: 0;
    color: #fff;
    font-family: Barlow;
    font-size: large;
    padding: 0.5rem 1rem;
    margin: 1rem;
}

button:hover{
    background-color: #AA0E47;
    cursor: pointer;
}

input {
    background-color: rgba(20,20,20);
    padding: 2px;
    color: white;
    width: 100%;
    border:0;
    border-bottom: 1px solid #eee;
}

@media only screen and (max-width: 800px) {
    .container{
        grid-template-columns: 1fr;
        background-image: linear-gradient(rgba(0,0,0,0.9), rgba(0,0,0,.8)), url(/images/NYC.png);
        background-position: center top;
        background-repeat: no-repeat;
    }

    .imageL {
        background-image: none;
    }

    #logo {
        left:0%;
}
}

